# timedated

./: Makefile.am  configure.ac
data/: org.freedesktop.locale1.service.in  org.freedesktop.timedate1.conf  org.freedesktop.timedate1.policy
src/: main.c  shellparser.h  timedated.c
tests/scratch/: org.freedesktop.timedate1.service.in
